--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="/Users/gowie/Workspace/TIHxC/Android-TIH/libs/android-logging-log4j-1.0.3.jar"/>
 	<classpathentry kind="lib" path="/Users/gowie/Workspace/TIHxC/Android-TIH/libs/log4j-1.2.17.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Unifeed"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
