--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -17,11 +17,14 @@
         android:theme="@style/Theme.Sherlock.Light" >
         <activity
             android:name="com.artisan.thisishardcore.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity 
+            android:name="com.artisan.thisishardcore.TabFragmentActivity">
         </activity>
     </application>
 
