--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,10 +5,11 @@
     android:versionName="1.0" >
     
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="17" />
+        android:targetSdkVersion="15" />
 
     <application
         android:allowBackup="true"
@@ -17,13 +18,17 @@
         android:theme="@style/Theme.Sherlock.Light" >
         <activity
             android:name="com.artisan.thisishardcore.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" 
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
+        <activity
+            android:screenOrientation="portrait" 
+            android:configChanges="orientation|keyboardHidden" 
             android:name="com.artisan.thisishardcore.TabFragmentActivity">
         </activity>
     </application>
