--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../Cloned/JakeWharton-ActionBarSherlock-e5c2d1c/library
+android.library.reference.1=../Unifeed-Android
+android.library.reference.2=../../Cloned/ActionBarSherlock-4.3.1/actionbarsherlock
