--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-logging-log4j-1.0.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="/Unifeed/libs/gson-1.6.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
