--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,20 +16,32 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Sherlock.Light" >
+        
+        <!-- SplashScreenActivity -->
         <activity
-            android:name="com.artisan.thisishardcore.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" 
-            android:configChanges="orientation|keyboardHidden">
+            android:name="com.artisan.thisishardcore.SplashScreenActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Sherlock.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- MainActivity -->
         <activity
+            android:name="com.artisan.thisishardcore.MainActivity"
+            android:label="@string/app_name"
             android:screenOrientation="portrait" 
-            android:configChanges="orientation|keyboardHidden" 
-            android:name="com.artisan.thisishardcore.TabFragmentActivity">
+            android:configChanges="orientation|keyboardHidden">
+        </activity>
+        
+        <!-- EventDetailActivity -->        
+        <activity 
+            android:screenOrientation="portrait" 
+            android:configChanges="orientation|keyboardHidden"
+            android:name="com.artisan.thisishardcore.schedule.EventDetailActivity" >
         </activity>
     </application>
 
