User can now click on news items to get to WebView

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,13 @@
             android:configChanges="orientation|keyboardHidden"
             android:name="com.artisan.thisishardcore.schedule.EventDetailActivity" >
         </activity>
+        <!-- TIHWebViewActivity -->
+        <activity 
+            android:screenOrientation="portrait" 
+            android:configChanges="orientation|keyboardHidden"
+            android:name="com.artisan.thisishardcore.TIHWebViewActivity" >
+        </activity>
+        
     </application>
 
 </manifest>
