--- a/.classpath
+++ b/.classpath
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <classpath>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
@@ -7,5 +7,11 @@
 	<classpathentry exported="true" kind="lib" path="libs/log4j-1.2.17.jar"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="output" path="bin/classes"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.ajdt.core.ASPECTJRT_CONTAINER"/>
+<classpathentry kind="lib" path="/Users/gowie/Workspace/TIHxC/ThisIsHardcore-Android/artisan_library/artisan_library_4.jar">
+<attributes>
+<attribute name="org.eclipse.ajdt.inpath" value="org.eclipse.ajdt.inpath"/>
+</attributes>
+</classpathentry>
+<classpathentry kind="output" path="bin/classes"/>
 </classpath>
