--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.artisan.thisishardcore"
     android:versionCode="1"
     android:versionName="1.0" >
-    
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,45 +11,52 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="15" />
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:name=".ArtisanInstrumentedApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Sherlock.Light" >
-        
+
         <!-- SplashScreenActivity -->
         <activity
             android:name="com.artisan.thisishardcore.SplashScreenActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Sherlock.NoActionBar">
+            android:theme="@style/Theme.Sherlock.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <!-- MainActivity -->
         <activity
             android:name="com.artisan.thisishardcore.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" 
-            android:configChanges="orientation|keyboardHidden">
-        </activity>
-        
-        <!-- EventDetailActivity -->        
-        <activity 
-            android:screenOrientation="portrait" 
             android:configChanges="orientation|keyboardHidden"
-            android:name="com.artisan.thisishardcore.schedule.EventDetailActivity" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+
+        <!-- EventDetailActivity -->
+        <activity
+            android:name="com.artisan.thisishardcore.schedule.EventDetailActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
         </activity>
         <!-- TIHWebViewActivity -->
-        <activity 
-            android:screenOrientation="portrait" 
+        <service android:name="com.artisan.arservices.ArtisanService" />
+
+        <activity
+            android:name="com.artisan.thisishardcore.TIHWebViewActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:name="com.artisan.thisishardcore.TIHWebViewActivity" >
+            android:screenOrientation="portrait" >
         </activity>
-        
     </application>
 
 </manifest>
