--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.artisan.thisishardcore"
     android:versionCode="1"
     android:versionName="1.0" >
-    
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -17,40 +17,46 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Sherlock.Light" >
-        
+
         <!-- SplashScreenActivity -->
         <activity
             android:name="com.artisan.thisishardcore.SplashScreenActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Sherlock.NoActionBar">
+            android:theme="@style/Theme.Sherlock.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <!-- MainActivity -->
         <activity
             android:name="com.artisan.thisishardcore.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" 
-            android:configChanges="orientation|keyboardHidden">
-        </activity>
-        
-        <!-- EventDetailActivity -->        
-        <activity 
-            android:screenOrientation="portrait" 
             android:configChanges="orientation|keyboardHidden"
-            android:name="com.artisan.thisishardcore.schedule.EventDetailActivity" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
+
+        <!-- EventDetailActivity -->
+        <activity
+            android:name="com.artisan.thisishardcore.schedule.EventDetailActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait" >
         </activity>
         <!-- TIHWebViewActivity -->
-        <activity 
-            android:screenOrientation="portrait" 
+        <activity
+            android:name="com.artisan.thisishardcore.TIHWebViewActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:name="com.artisan.thisishardcore.TIHWebViewActivity" >
+            android:screenOrientation="portrait" >
         </activity>
         
+        <!-- ExceptionActivity -->
+        <activity
+            android:name="com.artisan.thisishardcore.ExceptionActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
