--- a/project.properties
+++ b/project.properties
@@ -11,5 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-17
+target=android-18
 android.library.reference.1=../../Cloned/ActionBarSherlock-4.3.1/actionbarsherlock
+android.library.reference.2=../../Artisan/Android-SDK/samples/google-play-services_lib
